--- a/Little-lies/src/components/Setup/Setup.scss
+++ b/Little-lies/src/components/Setup/Setup.scss
@@ -97,6 +97,10 @@
   font-weight: 600;
 
   i { margin-right: 4px; font-size: 0.75rem; }
+
+  > span {
+    transition: opacity 0.3s ease;
+  }
 }
 
 .setup-warning {
